# app-sec-compass

./: .gitignore
CAPTURE/: index.md
OSSStudy/: LICENSE  README.md  codex_analysis.html  investment_insights_web3.md  second_me_study.html  suna_technical_report.html  web3_investment_report.html
OSSStudy/analysis_framework/: investment_insights_web3.md  technical_insights_framework.md
OSSStudy/docs/: claude-code_analysis.html
OSSStudy/reports/: claude-code_analysis.md  (+1 more)
ai-threat-intelligence/: README.md  ai-agent-system-design-v0.1.md  ai-agent-system-design-v0.2.md  ai-agent-system-design-v0.3.md  ai-agent-system-design-v0.4.md
ai-threat-intelligence/workflow/: .env.template  .gitignore  claude.md  data_sources.md  pyproject.toml  requirements.txt
ai-threat-intelligence/workflow/data_ingestion/: plan.md
ai-threat-intelligence/workflow/data_ingestion/hackernews/: README.md  googlesearch.py
ai-threat-intelligence/workflow/docs/: google_alerts_keywords.md  project_plan.md  raw_requirements.txt
ai-threat-intelligence/workflow/src/: __init__.py  graph.py  main.py  state.py
ai-threat-intelligence/workflow/src/nodes/: __init__.py  ingest.py  report.py  scrape.py  synthesize.py
ai-threat-intelligence/workflow/src/tools/: __init__.py  gmail_client.py  scraper.py  url_decoder.py
ai-threat-intelligence/workflow/tests/: test_scraper.py  test_url_decoder.py
owasp-juice-shop/: README.md
risk-agent-prototype/: README.md  model_sca.sh
scripts-goat/: cpp  pylint_issues.py
vibe_landscape/: abcd.html  example.html  index.html  practice1.html  practice2.html  practice3.html  practice4.html  practice5.html  practice6.html  present.md  stocks.html
(+193 files in other folders)
